--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "anchor-build": "cd anchor && anchor build",
     "anchor-localnet": "cd anchor && anchor localnet",
     "anchor-test": "cd anchor && anchor test",
-    "dev": "next dev",
+    "dev": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" next dev",
+    "dev:turbo": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096 --turbo\" next dev",
     "build": "next build",
     "ci": "npm run build",
     "start": "next start",
@@ -15,20 +16,38 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "0.30.1",
+    "@dialectlabs/blinks": "^0.22.5",
+    "@dialectlabs/react-sdk-blockchain-solana": "^3.0.0-beta.1",
+    "@dialectlabs/react-ui": "^3.0.0-beta.1",
+    "@dialectlabs/sdk": "^2.0.0-beta.2",
+    "@metaplex-foundation/js": "^0.20.1",
+    "@react-three/fiber": "^8.13.4",
+    "@solana/actions": "^1.6.6",
     "@solana/spl-token": "0.4.12",
     "@solana/wallet-adapter-base": "0.9.24",
     "@solana/wallet-adapter-react": "0.15.36",
     "@solana/wallet-adapter-react-ui": "0.9.36",
+    "@solana/wallet-adapter-wallets": "^0.19.34",
     "@solana/web3.js": "1.98.0",
     "@tabler/icons-react": "^3.30.0",
     "@tanstack/react-query": "^5.66.9",
     "@tanstack/react-query-next-experimental": "^5.66.9",
+    "axios": "^1.8.4",
+    "buffer": "^6.0.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "daisyui": "^4.12.24",
+    "framer-motion": "^12.7.4",
     "jotai": "^2.12.1",
     "next": "14.2.24",
+    "pino-pretty": "^13.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.5.2"
+    "react-hot-toast": "^2.5.2",
+    "react-swipeable": "^7.0.2",
+    "styled-components": "^6.1.17",
+    "tailwind-merge": "^3.2.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.6",
@@ -36,11 +55,13 @@
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "cross-env": "^7.0.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.24",
     "jest": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "ts-jest": "^29.2.6",
     "typescript": "5.4.5"
   }
