--- a/anchor/programs/mywalletapp/Cargo.toml
+++ b/anchor/programs/mywalletapp/Cargo.toml
@@ -1,20 +1,20 @@
 [package]
 name = "mywalletapp"
 version = "0.1.0"
-description = "Created with Anchor"
+description = "Music NFT marketplace on Solana"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "mywalletapp"
 
 [features]
-default = []
-cpi = ["no-entrypoint"]
 no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
-idl-build = ["anchor-lang/idl-build"]
+cpi = ["no-entrypoint"]
+default = []
 
 [dependencies]
-anchor-lang = "0.30.1"
+anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
+anchor-spl = "0.30.0"
+solana-program = "1.18.0"
