--- a/package.json
+++ b/package.json
@@ -16,13 +16,9 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "0.30.1",
-    "@dialectlabs/blinks": "^0.22.5",
-    "@dialectlabs/react-sdk-blockchain-solana": "^3.0.0-beta.1",
-    "@dialectlabs/react-ui": "^3.0.0-beta.1",
-    "@dialectlabs/sdk": "^2.0.0-beta.2",
     "@metaplex-foundation/js": "^0.20.1",
     "@react-three/fiber": "^8.13.4",
-    "@solana/actions": "^1.6.6",
+    "@solana/spl-memo": "^0.2.5",
     "@solana/spl-token": "0.4.12",
     "@solana/wallet-adapter-base": "0.9.24",
     "@solana/wallet-adapter-react": "0.15.36",
@@ -39,6 +35,7 @@
     "daisyui": "^4.12.24",
     "framer-motion": "^12.7.4",
     "jotai": "^2.12.1",
+    "lucide-react": "^0.510.0",
     "next": "14.2.24",
     "pino-pretty": "^13.0.0",
     "react": "^18",
