--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tanstack/react-query": "^5.66.9",
     "@tanstack/react-query-next-experimental": "^5.66.9",
     "axios": "^1.8.4",
+    "bigint-buffer": "^1.1.5",
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
