--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "daisyui": "^4.12.24",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.7.4",
     "jotai": "^2.12.1",
     "lucide-react": "^0.510.0",
